# Ashton-Gate-Parking

./: .gitignore  README.md  config.json  core.py  ics_generator.py  main.py  pyproject.toml  requirements.txt  scraper.py  scraper_bcfc.py  test_bcfc.py  test_calendar.py
.github/workflows/: update.yml
calendar/: bristol_bears_and_ashton_gate.ics
diagnostics/: last_run.json
docs/: index.html
tests/: fixtures.py  test_classification.py  test_ics.py  test_main.py  test_merge.py  test_parsing.py  test_scrapers.py
