[project]
name = "ashton-gate-parking"
version = "0.1.0"
description = "Bristol Bears & Ashton Gate event calendar scraper"
requires-python = ">=3.11"
dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "lxml>=5.2.0",
    "icalendar==5.0.12",
    "pytz==2024.1",
    "python-dateutil==2.9.0",
    "tzdata>=2024.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
